lab1/Test/L1-A-6-26.output
Error Type A at Line 6
Error Type A at Line 8
Error Type B at Line 11
Error Type A at Line 15
Error Type B at Line 25
Error Type B at Line 30
Error Type A at Line 40
